# web_midterm_1

./: .env.example  .gitignore  Dockerfile  README.md  TESTS.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: django.yml
forum/: admin.py  api_urls.py  models.py  pages.py  permissions.py  serializers.py  tests.py  views.py
forum/migrations/: 0001_initial.py
forum/templates/: base.html
forum/templates/forum/: about.html  thread_detail.html  thread_edit.html  thread_list.html
forum/tests/: test_forum_api.py  test_frontend_api.py  test_pages.py  test_permissions.py
lucky_forums/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
scripts/: format.sh  reset.sh
templates/: 403.html  404.html  banned.html  user_banned.html  user_not_found.html
templates/registration/: logged_out.html
users/: admin.py  apps.py  middleware.py  models.py  moderation_api.py  moderation_api_urls.py  notifications.py  notifications_api.py  notifications_api_urls.py  pages.py  permissions.py  profile_api_urls.py  profile_views.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py
users/templates/registration/: login.html
users/templates/users/: profile.html  profile_edit.html  register.html
users/tests/: test_auth_api.py  test_logout_and_404.py  test_moderation.py  test_notifications.py  test_profile_api.py  test_profile_model.py  test_user_pages.py
